@@ -1,8 +1,9 @@
 purged (0.8) UNRELEASED; urgency=medium
 
   * Add metric 'purged_udp_bytes_read_total'
+  * multicast: test URL extraction
 
- -- Emanuele Rocca <ema@wikimedia.org>  Fri, 17 Apr 2020 09:24:33 +0200
+ -- Emanuele Rocca <ema@wikimedia.org>  Mon, 20 Apr 2020 11:43:06 +0200
 
 purged (0.7) buster-wikimedia; urgency=medium
 
